# NBA-records-chatbot-with-rag

./: .env  README.md  dockerfile  mermaid_flowchart.txt
.devcontainer/: devcontainer.json
k8s/: cronjob.yaml  nba-records-deployment.yaml  nba-records-service.yaml  redis-deployment.yaml  secret_nba.yaml
src/: main.py  pyproject.toml
src/backend/: build_chain.py  cache.py  firebase_connection.py  llm_invoke.py  pinecone_utils.py  similarity_search.py
src/configs/: config.yml  nba-records-firebase-keys.json
src/data_prep/: chunking.py  embedding.py  get_data.py  prepare_data.py
src/utils/: config_loader.py
